--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
     <footer class="footer">
         <div class="icons_footer">
             <a class="footer_links" href="https://github.com/upALX" target="_blank">
-                <img src="assets/github.png" alt="Github asset image">
+                <img id="footer_icons" style="width: 24px;" src="assets/github.png" alt="Github asset image">
             </a>
             <a class="footer_links" href="https://www.hackerrank.com/profile/alxinc" target="_blank">
-                <img style="width: 32px" src="assets/hacker-rank.png" alt="Hacker rank link">
+                <img id="footer_icons" src="assets/hacker-rank.png" alt="Hacker rank link">
             </a>
             <a class="footer_links" href="https://beacons.ai/alxinc" target="_blank">
-                <img class="footer_links" src="assets/links.png" alt="beacons link">
+                <img id="footer_icons" class="footer_links" src="assets/links.png" alt="beacons link">
             </a>
             <a class="footer_links" href="mailto:alexandreaddres@gmail.com" target="_blank">
-                <img src="assets/mail.png" alt="beacons link">
+                <img id="footer_icons" src="assets/mail.png" alt="beacons link">
             </a>
             <a class="footer_links" href="https://www.linkedin.com/in/alxinc/" target="_blank">
-                <img class="footer_links" src="assets/linkedin.png" alt="Linkedin asset image">
+                <img id="footer_icons" class="footer_links" src="assets/linkedin.png" alt="Linkedin asset image">
             </a>
         </div>
         <h3>Developed with 💜 by José Alexandre</h3>
