--- a/portfolio.html
+++ b/portfolio.html
@@ -32,27 +32,66 @@
                     <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div class="swiper-slide">
-                        <img src="" alt="" srcset="">
-                        <!-- put for with nunjucks -->
-                        <div class="presentation__card">
-
-                            <div class="presentation__buttons">
-                                <button class="presentations__button_card">
-                                    <img src="assets/github-light.png" alt="" srcset=""> GitHub
-                                </button>
-                                <button class="presentations__button_card">
-                                    <img src="" alt=""> Project
-                                </button>
+                        <div class="swiper-slide">
+                            <img src="" alt="" srcset="">
+                            <!-- put for with nunjucks -->
+                            <div class="presentation__card">
+                                <div class="view_project">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="presentation_content">
+                                    <p>The project is about...</p>
+                                    <div class="presentation__buttons">
+                                        <a href="http://">
+                                            <button class="presentations__button_card">
+                                                <img src="assets/project.png" alt="" srcset=""> Access project
+                                            </button>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                            Slide 1
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="" alt="" srcset="">
+                            <!-- put for with nunjucks -->
+                            <div class="presentation__card">
+                                <div class="view_project">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="presentation_content">
+                                    <p>The project is about...</p>
+                                    <div class="presentation__buttons">
+                                        <a href="http://">
+                                            <button class="presentations__button_card">
+                                                <img src="assets/project.png" alt="" srcset=""> Access project
+                                            </button>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="" alt="" srcset="">
+                            <!-- put for with nunjucks -->
+                            <div class="presentation__card">
+                                <div class="view_project">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="presentation_content">
+                                    <p>The project is about...</p>
+                                    <div class="presentation__buttons">
+                                        <a href="http://">
+                                            <button class="presentations__button_card">
+                                                <img src="assets/project.png" alt="" srcset=""> Access project
+                                            </button>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="swiper-slide presentation__card">Slide 2</div>
-                    <div class="swiper-slide presentation__card">Slide 3</div>
-                    </div>
                     <!-- pagination -->
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination swiper-pagination-progressbar-fill"></div>
                 
                     <!-- navigation buttons -->
                     <div class="swiper-button-prev"></div>
