--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -27,12 +27,11 @@
             <div class="presentation__assignment__links">
                 <h2 class="presentation__links__subtitle">Find me</h2>
                 <a class="presentation__links__link" href="https://www.linkedin.com/in/upalx/">
-                    <img src="assets/linkedin-light.png" alt="Linkedin asset image">
-                    Linkedin
+                    <i class="fa-brands fa-linkedin"></i> Linkedin
                 </a>
                 
                 <a class="presentation__links__link" href="https://github.com/upALX">
-                    <img src="assets/github-light.png" alt="Github asset image">
+                    <i class="fa-brands fa-github"></i>
                     Github
                 </a>
             </div>
@@ -41,25 +40,24 @@
             alt="Imagem do Alexandre">
     </main>
     <footer class="footer">
-        <div class="icons_footer">
-            <a class="footer_links" href="https://github.com/upALX" target="_blank">
-                <img id="footer_icons" style="width: 24px;" src="assets/github.png" alt="Github asset image">
-            </a>
-            <a class="footer_links" href="https://www.hackerrank.com/profile/alxinc" target="_blank">
-                <img id="footer_icons" src="assets/hacker-rank.png" alt="Hacker rank link">
-            </a>
-            <a class="footer_links" href="https://beacons.ai/alxinc" target="_blank">
-                <img id="footer_icons" class="footer_links" src="assets/links.png" alt="beacons link">
-            </a>
-            <a class="footer_links" href="mailto:alexandreaddres@gmail.com" target="_blank">
-                <img id="footer_icons" src="assets/mail.png" alt="beacons link">
-            </a>
-            <a class="footer_links" href="https://www.linkedin.com/in/alxinc/" target="_blank">
-                <img id="footer_icons" class="footer_links" src="assets/linkedin.png" alt="Linkedin asset image">
-            </a>
-        </div>
+        <a class="footer_links" href="https://github.com/upALX" target="_blank">
+            <img id="footer_icons" style="width: 24px;" src="assets/github.png" alt="Github asset image">
+        </a>
+        <a class="footer_links" href="https://www.hackerrank.com/profile/alxinc" target="_blank">
+            <img id="footer_icons" src="assets/hacker-rank.png" alt="Hacker rank link">
+        </a>
+        <a class="footer_links" href="https://beacons.ai/alxinc" target="_blank">
+            <img id="footer_icons" class="footer_links" src="assets/links.png" alt="beacons link">
+        </a>
+        <a class="footer_links" href="mailto:alexandreaddres@gmail.com" target="_blank">
+            <img id="footer_icons" src="assets/mail.png" alt="beacons link">
+        </a>
+        <a class="footer_links" href="https://www.linkedin.com/in/alxinc/" target="_blank">
+            <img id="footer_icons" class="footer_links" src="assets/linkedin.png" alt="Linkedin asset image">
+        </a>
         <h3>Developed with 💜 by José Alexandre</h3>
     </footer>
+    <script src="https://kit.fontawesome.com/298f7cdb64.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
