adding a some fixes on mobile version. Not biggest

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,14 +40,7 @@
                                     <img src="" alt="">
                                 </div>
                                 <div class="presentation_content">
-                                    <p>The project is about...</p>
-                                    <div class="presentation__buttons">
-                                        <a href="http://">
-                                            <button class="presentations__button_card">
-                                                <img src="assets/project.png" alt="" srcset=""> Access project
-                                            </button>
-                                        </a>
-                                    </div>
+                                    <p>The project is about... AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA </p>
                                 </div>
                             </div>
                         </div>
@@ -101,7 +94,8 @@
         </section>
     </main>
     <footer class="footer">
-                <a class="footer_links" href="https://github.com/upALX" target="_blank">
+        <div class="icons"></div>
+            <a class="footer_links" href="https://github.com/upALX" target="_blank">
                 <img class="footer_icons" src="assets/github.png" alt="Github asset image">
             </a>
             <a class="footer_links" href="https://www.hackerrank.com/profile/alxinc" target="_blank">
