--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </header>
     <main class="presentation">
         <section class="presentation__assignment">
-            <h1 class="presentation__assignment__title">Take your digital business <strong> to another level  with quality technology!</strong> </h1>
-            <p class="presentation__assignment__paragraphs">Hello! I'm Alexandre, Software Developer with Backend specialty also working as Frontend and Data Analyst. I empower businesses and designers to put their full creative potential into practice.</p>
+            <h1 class="presentation__assignment__title">What i cannot create, <strong> i do not understand.</strong> </h1>
+            <p class="presentation__assignment__paragraphs">I believe that the power of learning anything lives in practice. I empower businesses and designers to put their full creative potential into practice.</p>
             <div class="presentation__assignment__links">
                 <h2 class="presentation__links__subtitle">Find me</h2>
                 <a class="presentation__links__link" href="https://www.linkedin.com/in/upalx/">
@@ -41,7 +41,7 @@
     </main>
     <footer class="footer">
         <a class="footer_links" href="https://github.com/upALX" target="_blank">
-            <img id="footer_icons" style="width: 24px;" src="assets/github.png" alt="Github asset image">
+            <img id="footer_icons" src="assets/github.png" alt="Github asset image">
         </a>
         <a class="footer_links" href="https://www.hackerrank.com/profile/alxinc" target="_blank">
             <img id="footer_icons" src="assets/hacker-rank.png" alt="Hacker rank link">
