adding about page concluded. Must be review

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -19,20 +19,88 @@
         </nav>
     </header>
     <main class="presentation">
-        <section class="presentation__assignment">
-            <p class="presentation__assignment__paragraphs">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, nisi molestiae sequi, magnam quas tempora consequuntur commodi voluptatem ex dicta iusto blanditiis ipsum, asperiores rerum? Porro beatae inventore est delectus!
-            </p>
-            <p class="presentation__assignment__paragraphs">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quaerat voluptatibus, officiis, nam adipisci expedita, excepturi quae quisquam nihil non voluptas perferendis quis harum doloremque sit est id saepe error.
-            </p>
+        <section class="presentation__assignment__timeline">
+            <div class="presentation__assignment__container presentation__assignment__container-left">
+                <img class="presentation__image__work left" src="assets/education.png" alt="mortarboard on top of planet earth">
+                <div class="presentation__assignment__text-box">
+                    <h2>Math and Statistics MBA</h2>
+                    <small>2023</small>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <span class="presentation__container__left-arrow"></span>
+                    <button> More about</button>
+                </div>
+            </div>
+            <div class="presentation__assignment__container presentation__assignment__container-right">
+                <img class="presentation__image__education right" src="assets/coffee-work.png" alt="a man reading the meeting agenda and drinking coffee">
+                <div class="presentation__assignment__text-box">
+                    <h2>QI TECH LTDA - Back-end Engineer</h2>
+                    <small>2023</small>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <span class="presentation__container__right-arrow"></span>
+                    <button> More about</button>
+                </div>
+            </div>
+            <div class="presentation__assignment__container presentation__assignment__container-left">
+                <img class="presentation__image__work left" src="assets/education.png" alt="mortarboard on top of planet earth">
+                <div class="presentation__assignment__text-box">
+                    <h2>Data analysis - Specialist Degree</h2>
+                    <small>2022</small>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <span class="presentation__container__left-arrow"></span>
+                    <button> More about</button>
+                </div>
+            </div>
+            <div class="presentation__assignment__container presentation__assignment__container-right">
+                <img class="presentation__image__education right" src="assets/coffee-work.png" alt="a man reading the meeting agenda and drinking coffee">
+                <div class="presentation__assignment__text-box">
+                    <h2>QI TECH LTDA - Full Stack Developer</h2>
+                    <small>2022</small>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <span class="presentation__container__right-arrow"></span>
+                    <button> More about</button>
+                </div>
+            </div>
+            <div class="presentation__assignment__container presentation__assignment__container-left">
+                <div class="presentation__assignment__text-box">
+                    <h2>Information Security - MBA</h2>
+                    <small>2017</small>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <span class="presentation__container__left-arrow"></span>
+                    <button> More about</button>
+                </div>
+            </div>
+            <div class="presentation__assignment__container presentation__assignment__container-right">
+                <div class="presentation__assignment__text-box">
+                    <h2>Systems analysis - Degree</h2>
+                    <small>2020</small>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <span class="presentation__container__right-arrow"></span>
+                    <button> More about</button>
+                </div>
+            </div>
+            <div class="presentation__assignment__container presentation__assignment__container-left">
+                <div class="presentation__assignment__text-box">
+                    <h2>Marista Irmão Jaime Biazus - High School</h2>
+                    <small>2017</small>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <span class="presentation__container__left-arrow"></span>
+                    <button> More about</button>
+                </div>
+            </div>
+            <div class="presentation__assignment__container presentation__assignment__container-right">
+                <div class="presentation__assignment__text-box">
+                    <h2>PUCRS - Pre-Grad</h2>
+                    <small>2016</small>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <span class="presentation__container__right-arrow"></span>
+                    <button> More about</button>
+                </div>
+            </div>
         </section>      
-        <img id="personal-image" src="https://lh3.googleusercontent.com/a/AAcHTteXCWhPPWwJgwJ-j43yb5DdPDp46IJh9QNARynw_g=s317-c-no"
-            alt="Imagem do Alexandre">  
     </main>
     <footer class="footer">
         <a class="footer_links" href="https://github.com/upALX" target="_blank">
-            <img id="footer_icons" style="width: 24px;" src="assets/github.png" alt="Github asset image">
+            <img id="footer_icons" src="assets/github.png" alt="Github asset image">
         </a>
         <a class="footer_links" href="https://www.hackerrank.com/profile/alxinc" target="_blank">
             <img id="footer_icons" src="assets/hacker-rank.png" alt="Hacker rank link">
@@ -48,6 +116,7 @@
         </a>
         <h3>Developed with 💜 by José Alexandre</h3>
     </footer>
+    <script src="https://kit.fontawesome.com/298f7cdb64.js" crossorigin="anonymous"></script>
 </body>
 </body>
 
