adding missing images to blocks

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <div class="presentation__assignment__container presentation__assignment__container-left">
                 <img class="presentation__image__work left" src="assets/education.png" alt="mortarboard on top of planet earth">
                 <div class="presentation__assignment__text-box">
-                    <h2>Math and Statistics MBA</h2>
+                    <h2>Math and Statistics - Master of Business Administration</h2>
                     <small>2023</small>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
                     <span class="presentation__container__left-arrow"></span>
@@ -61,15 +61,17 @@
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-left">
+                <img class="presentation__image__work left" src="assets/education.png" alt="mortarboard on top of planet earth">
                 <div class="presentation__assignment__text-box">
-                    <h2>Information Security - MBA</h2>
-                    <small>2017</small>
+                    <h2>Information Security - Master of Business Administration</h2>
+                    <small>2021</small>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
                     <span class="presentation__container__left-arrow"></span>
                     <button> More about</button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-right">
+                <img class="presentation__image__work left" src="assets/education.png" alt="mortarboard on top of planet earth">
                 <div class="presentation__assignment__text-box">
                     <h2>Systems analysis - Degree</h2>
                     <small>2020</small>
@@ -79,6 +81,7 @@
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-left">
+                <img class="presentation__image__work left" src="assets/education.png" alt="mortarboard on top of planet earth">
                 <div class="presentation__assignment__text-box">
                     <h2>Marista Irmão Jaime Biazus - High School</h2>
                     <small>2017</small>
@@ -88,6 +91,7 @@
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-right">
+                <img class="presentation__image__work left" src="assets/education.png" alt="mortarboard on top of planet earth">
                 <div class="presentation__assignment__text-box">
                     <h2>PUCRS - Pre-Grad</h2>
                     <small>2016</small>
