--- a/about.html
+++ b/about.html
@@ -104,21 +104,20 @@
     </main>
     <footer class="footer">
         <a class="footer_links" href="https://github.com/upALX" target="_blank">
-            <img id="footer_icons" src="assets/github.png" alt="Github asset image">
+            <img class="footer_icons" src="assets/github.png" alt="Github asset image">
         </a>
         <a class="footer_links" href="https://www.hackerrank.com/profile/alxinc" target="_blank">
-            <img id="footer_icons" src="assets/hacker-rank.png" alt="Hacker rank link">
+            <img class="footer_icons" src="assets/hacker-rank.png" alt="Hacker rank link">
         </a>
         <a class="footer_links" href="https://beacons.ai/alxinc" target="_blank">
-            <img id="footer_icons" class="footer_links" src="assets/links.png" alt="beacons link">
+            <img class="footer_icons" class="footer_links" src="assets/links.png" alt="beacons link">
         </a>
         <a class="footer_links" href="mailto:alexandreaddres@gmail.com" target="_blank">
-            <img id="footer_icons" src="assets/mail.png" alt="beacons link">
+            <img class="footer_icons" src="assets/mail.png" alt="beacons link">
         </a>
         <a class="footer_links" href="https://www.linkedin.com/in/alxinc/" target="_blank">
-            <img id="footer_icons" class="footer_links" src="assets/linkedin.png" alt="Linkedin asset image">
+            <img class="footer_icons" class="footer_links" src="assets/linkedin.png" alt="Linkedin asset image">
         </a>
-        <h3>Developed with 💜 by José Alexandre</h3>
     </footer>
     <script src="https://kit.fontawesome.com/298f7cdb64.js" crossorigin="anonymous"></script>
 </body>
