finish desktop version with no clean code

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,11 @@
                                     <img src="" alt="">
                                 </div>
                                 <div class="presentation_content">
-                                    <p>The project is about... AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA </p>
+                                    <p>The project is about... </p>
+                                </div>
+                                <div class="presentation__buttons-link">
+                                    <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
+                                    <button><img class="presentation__images" src="assets/go-project.png" alt="" srcset=""></button>
                                 </div>
                             </div>
                         </div>
@@ -52,14 +56,11 @@
                                     <img src="" alt="">
                                 </div>
                                 <div class="presentation_content">
-                                    <p>The project is about...</p>
-                                    <div class="presentation__buttons">
-                                        <a href="http://">
-                                            <button class="presentations__button_card">
-                                                <img src="assets/project.png" alt="" srcset=""> Access project
-                                            </button>
-                                        </a>
-                                    </div>
+                                    <p>The project is about... </p>
+                                </div>
+                                <div class="presentation__buttons-link">
+                                    <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
+                                    <button><img class="presentation__images" src="assets/go-project.png" alt="" srcset=""></button>
                                 </div>
                             </div>
                         </div>
@@ -71,14 +72,11 @@
                                     <img src="" alt="">
                                 </div>
                                 <div class="presentation_content">
-                                    <p>The project is about...</p>
-                                    <div class="presentation__buttons">
-                                        <a href="http://">
-                                            <button class="presentations__button_card">
-                                                <img src="assets/project.png" alt="" srcset=""> Access project
-                                            </button>
-                                        </a>
-                                    </div>
+                                    <p>The project is about... </p>
+                                </div>
+                                <div class="presentation__buttons-link">
+                                    <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
+                                    <button><img class="presentation__images" src="assets/go-project.png" alt="" srcset=""></button>
                                 </div>
                             </div>
                         </div>
