putting gif on portfolio projects area

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,10 +37,10 @@
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <img src="" alt="">
+                                    <img src="assets/construction-little-girl.webp" alt="" width="100%">
                                 </div>
                                 <div class="presentation_content">
-                                    <p>The project is about... </p>
+                                    <p>Is under migration... </p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
@@ -53,10 +53,10 @@
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <img src="" alt="">
+                                    <img src="assets/construction-little-girl.webp" alt="" width="100%">
                                 </div>
                                 <div class="presentation_content">
-                                    <p>The project is about... </p>
+                                    <p>Is under migration... </p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
@@ -69,10 +69,10 @@
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <img src="" alt="">
+                                    <img src="assets/construction-little-girl.webp" alt="" width="100%">
                                 </div>
                                 <div class="presentation_content">
-                                    <p>The project is about... </p>
+                                    <p>Is under migration... </p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
