Adding descriptions on card in about

--- a/about.html
+++ b/about.html
@@ -20,14 +20,24 @@
     </header>
     <main class="presentation">
         <section class="presentation__assignment__timeline">
+            <div class="presentation__assignment__container presentation__assignment__container-right">
+                <img class="presentation__image__education right" src="assets/education.png" alt="a man reading the meeting agenda and drinking coffee">
+                <div class="presentation__assignment__text-box">
+                    <h2>Certificates and complementary courses</h2>
+                    <small>Until 2023</small>
+                    <p>Here are all the complementary courses in the area of technology that I have taken and am taking to keep myself continually updated in all fields of technology.</p>
+                    <span class="presentation__container__right-arrow"></span>
+                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
+                </div>
+            </div>
             <div class="presentation__assignment__container presentation__assignment__container-left">
                 <img class="presentation__image__work left" src="assets/education.png" alt="mortarboard on top of planet earth">
                 <div class="presentation__assignment__text-box">
                     <h2>Math and Statistics - Master of Business Administration</h2>
                     <small>2023</small>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <p>MBA degree focused on macroeconomics and applied statistics. Final analysis of economic and fundamental market scenarios. Applied statistics practice with Python, Numpy and Pandas.</p>
                     <span class="presentation__container__left-arrow"></span>
-                    <button> More about</button>
+                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-right">
@@ -35,9 +45,9 @@
                 <div class="presentation__assignment__text-box">
                     <h2>QI TECH LTDA - Back-end Engineer</h2>
                     <small>2023</small>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <p>Validation and analysis of requirements with customers, working directly in RFCs to create new solutions external to the financial part. Creation of high-performance RESTful APIs and volume of requests using technologies/methodologies such as Python, Docker, Kubernetes, MySQL, PostgreSQL, SQLAlchemy, TDD, Falcon, Flask, AWS, Google Cloud, PubSub, CI/CD on Gitlab, Grafana, among others SRE tools. All used in APIs that manage and automate credit assignments for more than 50 funds (FIDCs) that handle billions in credit per year. Working on launches and main news within and outside of working hours.</p>
                     <span class="presentation__container__right-arrow"></span>
-                    <button> More about</button>
+                    <button> <a href="https://qitech.com.br" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-left">
@@ -45,9 +55,9 @@
                 <div class="presentation__assignment__text-box">
                     <h2>Data analysis - Specialist Degree</h2>
                     <small>2022</small>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <p>Specialist degree focused on data analysis and processing using the ETL process to generate information through Hadoop environment tools such as Spark and Kafka. Practice with PySpark and Databricks.</p>
                     <span class="presentation__container__left-arrow"></span>
-                    <button> More about</button>
+                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-right">
@@ -55,9 +65,9 @@
                 <div class="presentation__assignment__text-box">
                     <h2>QI TECH LTDA - Full Stack Developer</h2>
                     <small>2022</small>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <p>Direct involvement in technical integrations and meetings with customers in Banking as a Service products. Constant involvement in the formulation and development of documentation for REST APIs. Bug resolution and feature development on the front-end of the platform using Javascript, React, Jinja, integrated with CI/CD pipelines. Construction and integration of REST APIs linked to public securities purchase and sale events using technologies such as Python, Docker, MySQL, SQLAlchemy, Google Cloud, Falcon and FastAPI.</p>
                     <span class="presentation__container__right-arrow"></span>
-                    <button> More about</button>
+                    <button> <a href="https://qitech.com.br" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-left">
@@ -67,7 +77,7 @@
                     <small>2021</small>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
                     <span class="presentation__container__left-arrow"></span>
-                    <button> More about</button>
+                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-right">
@@ -75,9 +85,9 @@
                 <div class="presentation__assignment__text-box">
                     <h2>Systems analysis - Degree</h2>
                     <small>2020</small>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <p>Degree in systems analysis and development focused on the practice and theory of computing, modeling and data engineering for systems. Massive practice with Java, web with Spring Boot, databases with MySQL and MongoDB.</p>
                     <span class="presentation__container__right-arrow"></span>
-                    <button> More about</button>
+                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-left">
@@ -85,9 +95,9 @@
                 <div class="presentation__assignment__text-box">
                     <h2>Marista Irmão Jaime Biazus - High School</h2>
                     <small>2017</small>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <p>Here you can find my entire trajectory over the 3 years of high school.</p>
                     <span class="presentation__container__left-arrow"></span>
-                    <button> More about</button>
+                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-right">
@@ -95,9 +105,9 @@
                 <div class="presentation__assignment__text-box">
                     <h2>PUCRS - Pre-Grad</h2>
                     <small>2016</small>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <p>This course was where I had direct contact with information technology, where I came to love the world of technology.</p>
                     <span class="presentation__container__right-arrow"></span>
-                    <button> More about</button>
+                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
             </div>
         </section>      
