adding iframe and roles to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,14 +33,15 @@
                     <div class="swiper-wrapper">
                     <!-- Slides -->
                         <div class="swiper-slide">
-                            <img src="" alt="" srcset="">
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <img src="assets/construction-little-girl.webp" alt="" width="100%">
+                                    <iframe width="500" height="315" 
+                                        src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+                                    </iframe>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Is under migration... </p>
+                                    <p>Task API is a task management API developed with Java, Spring Boot and Hibernate. </p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
@@ -49,14 +50,15 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <img src="" alt="" srcset="">
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <img src="assets/construction-little-girl.webp" alt="" width="100%">
+                                    <iframe width="500" height="315" 
+                                        src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+                                    </iframe>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Is under migration... </p>
+                                    <p>Help Creator is an app that creates titles and descriptions based on content. Developed with Typescript, Node, ReactJS, Prisma.</p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
@@ -65,14 +67,15 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <img src="" alt="" srcset="">
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <img src="assets/construction-little-girl.webp" alt="" width="100%">
+                                    <iframe width="500" height="315" 
+                                        src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+                                    </iframe>
                                 </div>
                                 <div class="presentation_content">
-                                    <p>Is under migration... </p>
+                                    <p>Life is a query platform developed with Python and Django. </p>
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
