--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="presentation">
         <section class="presentation__assignment">
             <h1 class="presentation__assignment__title">What i cannot create, <strong> i do not understand.</strong> </h1>
-            <p class="presentation__assignment__paragraphs">I believe that the power of learning anything lives in practice. I empower businesses and designers to put their full creative potential into practice.</p>
+            <p class="presentation__assignment__paragraphs">I believe the power of learning anything lives in practice and consistency over time. This means that learning N things is a matter of one or two years; Being eloquent in one of them takes half a lifetime.</p>
             <div class="presentation__assignment__links">
                 <h2 class="presentation__links__subtitle">Find me</h2>
                 <a class="presentation__links__link" href="https://www.linkedin.com/in/upalx/">
