--- a/portfolio.html
+++ b/portfolio.html
@@ -36,16 +36,14 @@
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <iframe width="500" height="315" 
-                                        src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
-                                    </iframe>
+                                    <iframe src="https://www.youtube.com/embed/8ONppXj427Y?autoplay=1&loop=1&mute=1" title="Task API" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </div>
                                 <div class="presentation_content">
                                     <p>Task API is a task management API developed with Java, Spring Boot and Hibernate. </p>
                                 </div>
                                 <div class="presentation__buttons-link">
-                                    <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
-                                    <button><img class="presentation__images" src="assets/go-project.png" alt="" srcset=""></button>
+                                    <button><a href="https://github.com/upALX/TaskAPI" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></a></button>
+                                    <button><a href="http://"> <img class="presentation__images" src="assets/go-project.png" alt="" srcset=""></a></button>
                                 </div>
                             </div>
                         </div>
@@ -53,15 +51,13 @@
                             <!-- put for with nunjucks -->
                             <div class="presentation__card">
                                 <div class="view_project">
-                                    <iframe width="500" height="315" 
-                                        src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
-                                    </iframe>
+                                    <iframe src="https://www.youtube.com/embed/fwN73qjPLRg?autoplay=1&loop=1&mute=1" title="HelpCreatorRunning" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 </div>
                                 <div class="presentation_content">
                                     <p>Help Creator is an app that creates titles and descriptions based on content. Developed with Typescript, Node, ReactJS, Prisma.</p>
                                 </div>
                                 <div class="presentation__buttons-link">
-                                    <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
+                                    <button><a href="https://github.com/upALX/TaskAPI" target="_blank"><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></a></button>
                                     <button><img class="presentation__images" src="assets/go-project.png" alt="" srcset=""></button>
                                 </div>
                             </div>
@@ -79,7 +75,7 @@
                                 </div>
                                 <div class="presentation__buttons-link">
                                     <button><img class="presentation__images" src="assets/go-code.png" alt="" srcset=""></button>
-                                    <button><img class="presentation__images" src="assets/go-project.png" alt="" srcset=""></button>
+                                    <button><a href="http://"> <img class="presentation__images" src="assets/go-project.png" alt="" srcset=""></a></button>
                                 </div>
                             </div>
                         </div>
@@ -114,6 +110,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/swipper.js"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
 </body>
 
 </html>
