fixing width text box of cards

--- a/about.html
+++ b/about.html
@@ -80,8 +80,8 @@
                     <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
             </div>
-            <div class="presentation__assignment__container presentation__assignment__container-left">
-                <img class="presentation__image__work left" src="assets/education.png" alt="mortarboard on top of planet earth">
+            <div class="presentation__assignment__container presentation__assignment__container-right">
+                <img class="presentation__image__education right" src="assets/education.png" alt="a man reading the meeting agenda and drinking coffee">
                 <div class="presentation__assignment__text-box">
                     <h2>Systems analysis - Degree</h2>
                     <small>2020</small>
