--- a/about.html
+++ b/about.html
@@ -26,6 +26,30 @@
                     <h2>Certificates and complementary courses</h2>
                     <small>Until 2023</small>
                     <p>Here are all the complementary courses in the area of technology that I have taken and am taking to keep myself continually updated in all fields of technology.</p>
+                    <div class="presentation__text-box__list">
+                        <ul class="presentation__text-box__list-styled">
+                            <li>Alura: Swagger </li>
+                            <li>Formação OO: Python</li>
+                            <li>Javascript to Back-end</li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
                     <span class="presentation__container__right-arrow"></span>
                     <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
@@ -36,6 +60,11 @@
                     <h2>Math and Statistics - Master of Business Administration</h2>
                     <small>2023</small>
                     <p>MBA degree focused on macroeconomics and applied statistics. Final analysis of economic and fundamental market scenarios. Applied statistics practice with Python, Numpy and Pandas.</p>
+                    <div class="presentation__text-box__list">
+                        <ul class="presentation__text-box__list-different">
+                            <li></li>
+                        </ul>
+                    </div>
                     <span class="presentation__container__left-arrow"></span>
                     <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
@@ -43,9 +72,17 @@
             <div class="presentation__assignment__container presentation__assignment__container-right">
                 <img class="presentation__image__education right" src="assets/coffee-work.png" alt="a man reading the meeting agenda and drinking coffee">
                 <div class="presentation__assignment__text-box">
-                    <h2>QI TECH LTDA - Back-end Engineer</h2>
+                    <h2>QI TECH LTDA - Full Stack Engineer</h2>
                     <small>2023</small>
-                    <p>Validation and analysis of requirements with customers, working directly in RFCs to create new solutions external to the financial part. Creation of high-performance RESTful APIs and volume of requests using technologies/methodologies such as Python, Docker, Kubernetes, MySQL, PostgreSQL, SQLAlchemy, TDD, Falcon, Flask, AWS, Google Cloud, PubSub, CI/CD on Gitlab, Grafana, among others SRE tools. All used in APIs that manage and automate credit assignments for more than 50 funds (FIDCs) that handle billions in credit per year. Working on launches and main news within and outside of working hours.</p>
+                    <p>This year I worked as a full stack engineer focusing on the back end, participating in the construction of RESTful APIs and actively contributed to validating requirements and developing financial solutions through RFCs. Topics I covered were:</p>
+                    <div class="presentation__text-box__list">
+                        <ul>
+                            <li>I help to create REST APIs that automatization the credit assignment process.</li>
+                            <li>I had proactive monitoring using SRE tools as Grafana to track the flow messages on APIs.</li>
+                            <li>Used Google Cloud and Kubernetes to monitor, log and debug APIs integrated with Opsgenie and Slack.</li>
+                            <li></li>
+                        </ul>
+                    </div>
                     <span class="presentation__container__right-arrow"></span>
                     <button> <a href="https://qitech.com.br" target="__blank">More about</a></button>
                 </div>
@@ -56,6 +93,11 @@
                     <h2>Data analysis - Specialist Degree</h2>
                     <small>2022</small>
                     <p>Specialist degree focused on data analysis and processing using the ETL process to generate information through Hadoop environment tools such as Spark and Kafka. Practice with PySpark and Databricks.</p>
+                    <div class="presentation__text-box__list">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
                     <span class="presentation__container__left-arrow"></span>
                     <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
@@ -66,6 +108,11 @@
                     <h2>QI TECH LTDA - Full Stack Developer</h2>
                     <small>2022</small>
                     <p>Direct involvement in technical integrations and meetings with customers in Banking as a Service products. Constant involvement in the formulation and development of documentation for REST APIs. Bug resolution and feature development on the front-end of the platform using Javascript, React, Jinja, integrated with CI/CD pipelines. Construction and integration of REST APIs linked to public securities purchase and sale events using technologies such as Python, Docker, MySQL, SQLAlchemy, Google Cloud, Falcon and FastAPI.</p>
+                    <div class="presentation__text-box__list">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
                     <span class="presentation__container__right-arrow"></span>
                     <button> <a href="https://qitech.com.br" target="__blank">More about</a></button>
                 </div>
@@ -76,8 +123,13 @@
                     <h2>Information Security - Master of Business Administration</h2>
                     <small>2021</small>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem laborum totam obcaecati ratione, adipisci dolore numquam architecto dolorem fuga veritatis quia iste cumque odio maxime vitae omnis. Quaerat, suscipit culpa.</p>
+                    <div class="presentation__text-box__list">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
                     <span class="presentation__container__left-arrow"></span>
-                    <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
+                    <button disabled> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
             </div>
             <div class="presentation__assignment__container presentation__assignment__container-right">
@@ -86,6 +138,11 @@
                     <h2>Systems analysis - Degree</h2>
                     <small>2020</small>
                     <p>Degree in systems analysis and development focused on the practice and theory of computing, modeling and data engineering for systems. Massive practice with Java, web with Spring Boot, databases with MySQL and MongoDB.</p>
+                    <div class="presentation__text-box__list">
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
                     <span class="presentation__container__right-arrow"></span>
                     <button> <a href="https://drive.google.com/drive/folders/1l6F5gSUcw788t51j8_aiePSrB0p0C-2d?usp=sharing" target="__blank">More about</a></button>
                 </div>
